# arxiv-paper-agent

./: .gitignore  LICENSE  README.md  cluster.md  credentials_example.json  main.py  mcp_agent.config.yaml  mcp_workflow.yaml  pyproject.toml
scripts/: CC_apptainer_serve_example.sh  deploy_gptoss.sh  deploy_minimax.sh  deploy_qwen3-coder-30.sh  deploy_qwen3-coder.sh  deploy_qwen3.sh  ngrok_serve_example.sh  nibi_serve_example.sh  prepare_tessdata.sh  test_api.py
src/axpa/: agent_arxiv.py  app.py  arxiv.py  category_prompt.py  mcp_agent.config.yaml  pipeline.py  server.py
src/axpa/agents/: category_selector.py  html_converter.py  paper_filter.py  paper_scorer.py  paper_summarizer.py
src/axpa/agents/prompts/: __init__.py  category_prompt.py
src/axpa/config/: agents.yaml  workflows.yaml
src/axpa/configs/: __init__.py  cfg_exporter.py  cfg_orchestrator.py  cfg_pipeline.py  cfg_user.py
src/axpa/outputs/: data_models.py
src/axpa/outputs/exporters/: base.py  credentials.json  email_exporter.py  exporter_dispatcher.py  local_exporter.py  token.json
src/axpa/outputs/formatters/: __init__.py  base.py  html_formatter.py  json_formatter.py  markdown_formatter.py  markfown_formatter.py
src/axpa/servers/: arxiv.py
src/axpa/servers/arxiv_latex_mcp/: main.py
src/axpa/servers/arxiv_mcp_server/: __init__.py  __main__.py  config.py  server.py
src/axpa/servers/arxiv_mcp_server/prompts/: __init__.py  deep_research_analysis_prompt.py  handlers.py  prompt_manager.py  prompts.py
src/axpa/servers/arxiv_mcp_server/resources/: __init__.py  papers.py
src/axpa/servers/arxiv_mcp_server/tools/: __init__.py  download.py  list_papers.py  read_paper.py  search.py
src/axpa/servers/arxiv_paper_mcp/: main.py
src/axpa/workflows/: __init__.py  deep_research.py  orchestrator.py
src/axpa/workflows/stages/: __init__.py  category_selection.py  html_formatting.py  paper_downloading.py  paper_fetching.py  paper_filtering.py  paper_scoring.py  paper_summarization.py
tests/: __init__.py  conftest.py  test_arxiv_paper_mcp.py
user_configs/: example.yaml
