[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arxiv-paper-agent"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "larryinx" }]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.3",
    "arxiv>=2.4.0",
    "fastmcp>=2.14.2",
    "feedparser>=6.0.12",
    "mcp>=1.25.0",
    "mcp-agent>=0.2.6",
    "openai>=2.14.0",
    "pydantic>=2.12.5",
    "pymupdf4llm>=0.2.9",
    "python-dateutil>=2.9.0.post0",
    "sse-starlette>=3.1.2",
    "uvicorn>=0.40.0",
    "vllm>=0.13.0",
]

[project.urls]
Source = "https://github.com/uw-swag/arxiv-paper-agent"
Issues = "https://github.com/uw-swag/arxiv-paper-agent/issues"

[tool.hatch.version]
path = "src/axpa/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/axpa"]

# linting (ruff)
[tool.ruff]
target-version = "py312"
line-length = 120
select = [
    "E", # pycodestyle error
    "F", # pyflakes
    "I", # isort
]

[tool.ruff.isort]
known-first-party = ["axpa"]

[dependency-groups]
dev = [
    "black",
    "coverage[toml]",
    "hatch",
    "pytest>=6",
    "pytest-cov",
    "ruff",
]
